designing home page

--- a/MarketPricingSystem/MarketPricingSystem/Views/Home/Index.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Home/Index.cshtml
@@ -2,3 +2,48 @@
     ViewBag.Title = "Home Page";
 }
 
+<!-- home section starts  -->
+
+<section class="home" id="home">
+
+
+
+    <div class="content">
+        <h3>Choose best price from your Home</h3>
+        <p>We provide this application to help you find your products at best price ,
+         Save Money ! Save Time !
+        </p>
+        <a href="#hhjj" class="btn"> Search Products <span class="fas fa-chevron-right"></span> </a>
+    </div>
+    <div class="image">
+        <img style="height:850px" src="~/Images/bag.svg" alt="">
+    </div>
+
+</section>
+
+<!-- home section ends -->
+<!-- about section starts  -->
+
+<section class="about" id="about">
+
+    <h1 class="heading"> <span>about</span> us </h1>
+
+    <div class="row">
+
+
+
+        <div class="content">
+            <h3>Compare grocery prices</h3>
+            <p>Compare 15+ supermarkets, discover daily deals, and create smart shopping lists to save as much as 30% on your next grocery trip
+            shopping lists to save as much as 30% on your next grocery trip</p>
+            <a href="#" class="btn"> learn more <span class="fas fa-chevron-right"></span> </a>
+        </div>
+
+        <div class="image">
+            <img style="height:850px" src="~/Images/dollar.svg" alt="">
+        </div>
+    </div>
+
+</section>
+
+<!-- about section ends -->
