--- a/MarketPricingSystem/MarketPricingSystem/Content/style.css
+++ b/MarketPricingSystem/MarketPricingSystem/Content/style.css
@@ -1012,4 +1012,31 @@ position: absolute;top: 110px;left: 34%; z-index:800; background-color: black;bo
     color: green;
   
 }
+/*login*/
 
+.center {
+    margin-left: 40%;
+    height:500px;
+    margin-bottom:50px;
+}
+
+    .center .left {
+        margin-right: 10px;
+    }
+
+.btn {
+    margin: 40px;
+}
+
+.right {
+    border: black solid 5px;
+    border-radius: 10px;
+    padding: 10px;
+    background-color: white;
+}
+
+.theme_icon {
+    color: antiquewhite;
+    cursor: pointer;
+    transition: transform 0.5s;
+}
