workin on supermarketlist view and controller and populate database with testing data

--- a/MarketPricingSystem/MarketPricingSystem/Views/Home/Index.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
         <p>We provide this application to help you find your products at best price ,
          Save Money ! Save Time !
         </p>
-        <a href="#hhjj" class="btn"> Search Products <span class="fas fa-chevron-right"></span> </a>
+        <a href="Home/SuperMarketList" class="btn"> Search Products <span class="fas fa-chevron-right"></span> </a>
     </div>
     <div class="image">
         <img style="height:850px" src="~/Images/bag.svg" alt="">
