--- a/MarketPricingSystem/MarketPricingSystem/Views/Shared/_Layout.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
 
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-
+    @RenderSection("Styles", false)
 
     <!-- font awesome cdn link  -->
     <script src="https://kit.fontawesome.com/c48ab5a612.js" crossorigin="anonymous"></script>
