--- a/MarketPricingSystem/MarketPricingSystem/Content/style.css
+++ b/MarketPricingSystem/MarketPricingSystem/Content/style.css
@@ -1029,7 +1029,7 @@ position: absolute;top: 110px;left: 34%; z-index:800; background-color: black;bo
 }
 
 .right {
-    border: black solid 5px;
+    border: 2px solid   green ;
     border-radius: 10px;
     padding: 10px;
     background-color: white;
