--- a/MarketPricingSystem/MarketPricingSystem/Views/Home/SuperMarketList.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Home/SuperMarketList.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "SuperMarketList";
 }
 
-<div style="height:100px">a</div>
+<div style="height:100px"> <span></span></div>
 
 @if (Model.Count() == 0)
 {
@@ -13,35 +13,42 @@
 
 else
 {
+
     <table id="example" class="table table-striped table-bordered" style="width:100% ;">
         <thead>
             <tr>
                 <th>Market Name</th>
                 <th>Market Region</th>
                 <th>Description</th>
-                <th>Show products</th>
-
+               
+                <th>products</th>
 
             </tr>
         </thead>
         <tbody>
             @foreach (var market in Model)
             {
-                <tr>
-                    <td>@market.SupermarketName</td>
-                    <td>@market.SupermarketRegion</td>
-                    <td>@market.SupermarketDescription</td>
-                  
-                    <td>@Html.ActionLink("products", "", "", new { @class = "btn btn-primary" })</td>
-                </tr>
-            }
+               
+            <tr>
+                <td>@market.SupermarketName</td>
+                <td>@market.SupermarketRegion</td>
+                <td>@market.SupermarketDescription</td>
+              
+
+                <td>@Html.ActionLink("products", "", "", new { @class = "btn btn-primary" })</td>
+            </tr>
+        }
         </tbody>
     </table>
+
+    <div style="margin-bottom:200px">
+        <span></span>
+    </div>
 }
 
 @section Styles {
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.css" rel="stylesheet" type="text/css" />
-    <link href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap4.min.css" rel="stylesheet" type="text/css" />
+ 
+   <link href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap4.min.css" rel="stylesheet" type="text/css" />
 }
 
 @section scripts
