--- a/MarketPricingSystem/MarketPricingSystem/Views/Home/Options.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Home/Options.cshtml
@@ -3,5 +3,49 @@
     ViewBag.Title = "Options";
 }
 
-<h2>Options</h2>
 
+
+
+<div class="row1-cont" style="margin-top:90px; margin-bottom:150px ">
+    <div class="boxx boxx-down cyan">
+
+        <h2>Best Product Price</h2>
+        <p>Lowest Product Price Here !</p>
+        <img src="https://assets.codepen.io/2301174/icon-supervisor.svg" alt="">
+    </div>
+
+
+
+    <div class="boxx red">
+        <a href="/Home/SuperMarketList">
+            <h2>SuperMarket</h2>
+            <p>search for supermarkets and products !</p>
+            <img src="https://assets.codepen.io/2301174/icon-team-builder.svg" alt="">
+        </a>
+    </div>
+
+   
+    <div class="boxx boxx-down blue">
+        <h2>Track</h2>
+        <p>Track how product price changes in a superMarket</p>
+        <img src="https://assets.codepen.io/2301174/icon-calculator.svg" alt="">
+    </div>
+</div>
+<div class="row2-cont">
+    <div class="boxx orange">
+        <h2>Events</h2>
+        <p>Events, sales, vouchers !</p>
+        <img src="https://assets.codepen.io/2301174/icon-karma.svg" alt="">
+    </div>
+</div>
+
+<div style="margin-bottom:60px"> <span></span></div>
+
+
+@section styles {
+
+    <link rel="stylesheet" href="~/Content/options.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,600;1,200;1,400;1,600&display=swap"
+          rel="stylesheet">
+
+}
