working on productlist page

--- a/MarketPricingSystem/MarketPricingSystem/Views/Home/ProductList.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Home/ProductList.cshtml
@@ -1,9 +1,8 @@
-﻿@model IEnumerable<MarketPricingSystem.Models.Supermarket>
-
+﻿@model MarketPricingSystem.Models.Supermarketproducts
 @{
-    ViewBag.Title = "SuperMarketList";
+    ViewBag.Title = "ProductList";
 }
-
+<
 <div style="height:100px"> <span></span></div>
 
 @if (Model.Count() == 0)
