populating some data for testing

--- a/MarketPricingSystem/MarketPricingSystem/Views/Home/ProductList.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Home/ProductList.cshtml
@@ -1,4 +1,4 @@
-﻿@model MarketPricingSystem.Models.Supermarketproducts
+﻿@model  IEnumerable< MarketPricingSystem.Models.Supermarketproducts>
 @{
     ViewBag.Title = "ProductList";
 }
