--- a/MarketPricingSystem/MarketPricingSystem/Views/Home/SuperMarketList.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Home/SuperMarketList.cshtml
@@ -14,7 +14,7 @@
 else
 {
 
-    <table id="example" class="table table-striped table-bordered" style="width:100% ;">
+    <table id="supermarket" class="table table-striped table-bordered" style="width:100% ;">
         <thead>
             <tr>
                 <th>Market Name</th>
@@ -61,7 +61,7 @@ else
 
     <script>
         $(document).ready(function () {
-            $('#example').DataTable();
+            $('#supermarket').DataTable();
         });
 
 
