--- a/MarketPricingSystem/MarketPricingSystem/Views/Home/Options.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Home/Options.cshtml
@@ -8,10 +8,11 @@
 
 <div class="row1-cont" style="margin-top:90px; margin-bottom:150px ">
     <div class="boxx boxx-down cyan">
-
-        <h2>Best Product Price</h2>
-        <p>Lowest Product Price Here !</p>
-        <img src="https://assets.codepen.io/2301174/icon-supervisor.svg" alt="">
+        <a href="/Home/Allproducts">
+            <h2>Best Product Price</h2>
+            <p>Lowest Product Price Here !</p>
+            <img src="https://assets.codepen.io/2301174/icon-supervisor.svg" alt="">
+            </a>
     </div>
 
 
