finished supermarket list , product list , cheapest and expensive product

--- a/MarketPricingSystem/MarketPricingSystem/Views/Home/Allproducts.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Home/Allproducts.cshtml
@@ -23,6 +23,7 @@ else
                 <th>Name</th>
                 <th>Bar code</th>
                 <th>Description</th>
+                <th>Category</th>
                 <th>Cheap price</th>
                 <th>Expensive price</th>
 
@@ -39,6 +40,7 @@ else
                     <td>@market.productname</td>
                     <td>@market.productBarcode</td>
                     <td>@market.productDescription</td>
+                    <td>@market.productcategory</td>
                  
 
 
