--- a/MarketPricingSystem/MarketPricingSystem/Views/Home/Index.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Home/Index.cshtml
@@ -47,3 +47,11 @@
 </section>
 
 <!-- about section ends -->
+
+@section scripts {
+    
+    <script src="~/Scripts/script.js">
+
+    </script>
+    
+    }
