--- a/MarketPricingSystem/MarketPricingSystem/Views/Home/ProductList.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Home/ProductList.cshtml
@@ -19,6 +19,7 @@ else
                 <th>Barcode</th>
                 <th>Description</th>
                 <th>price</th>
+                <th>category</th>
               
                
              
@@ -34,6 +35,7 @@ else
                 <td>@market.productBarcode</td>
                 <td>@market.productDescription</td>
                 <td>@market.productprice<span>$</span></td>
+                <td>@market.productcategory</td>
              
               
 
