--- a/MarketPricingSystem/MarketPricingSystem/Views/Shared/_Layout.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Shared/_Layout.cshtml
@@ -78,6 +78,8 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/Scripts/script.js")
+   
     @RenderSection("scripts", required: false)
 </body>
 </html>
