--- a/MarketPricingSystem/MarketPricingSystem/Views/Shared/_Layout.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
 
         <nav class="navbar">
             @Html.ActionLink("Home", "Index", "Home")
-            @Html.ActionLink("Sign in", "Signin", "Home")
+            @Html.ActionLink("User", "Index", "Admin")
         </nav>
 
         <div id="menu-btn" class="fas fa-bars"></div>
