--- a/MarketPricingSystem/MarketPricingSystem/Views/Account/signin.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Account/signin.cshtml
@@ -6,7 +6,7 @@
 
 <h2>signin</h2>
 
-@using (Html.BeginForm("Validatesignin", "Home", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { role = "form" })) 
+@using (Html.BeginForm("Validatesignin", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { role = "form" })) 
 {
     @Html.AntiForgeryToken()
     
