--- a/MarketPricingSystem/MarketPricingSystem/Views/Account/signin.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Account/signin.cshtml
@@ -4,38 +4,47 @@
     ViewBag.Title = "signin";
 }
 
-<h2>signin</h2>
+<div style="margin-top:150px"><span></span> </div>
 
-@using (Html.BeginForm("Validatesignin", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { role = "form" })) 
-{
-    @Html.AntiForgeryToken()
-    
+
+<div  style="margin-left:25%" >
+
+
+    @using (Html.BeginForm("Validatesignin", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { role = "form" }))
+    {
+        @Html.AntiForgeryToken()
+
     <div class="form-horizontal">
         <h4>signin</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.gmail, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(m => m.Gmail, new { @class = "col-md-2 control-label" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.gmail, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.gmail, "", new { @class = "text-danger" })
+                @Html.TextBoxFor(m => m.Gmail, new { @class = "form-control" , type="gmail" })
+                @Html.ValidationMessageFor(m => m.Gmail, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.password, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.password, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
+                @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+            <div>
+
+                <button type="submit" class="btn btn-primary">login</button>
             </div>
         </div>
     </div>
-}
 
+    }
+
+</div>
+
+<div style="margin-top:200px"><span></span> </div>
 
