working on dashboard/supermarket features

--- a/MarketPricingSystem/MarketPricingSystem/Views/Home/SuperMarketList.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Home/SuperMarketList.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<MarketPricingSystem.Models.Supermarket>
 
 @{
-    ViewBag.Title = "SuperMarketList";
+    ViewBag.Title = "SuperMarkets";
 }
 
 <div style="height:100px"> <span></span></div>
@@ -21,7 +21,6 @@ else
                 <th>Market Region</th>
                 <th>Description</th>
                 <th>phone number</th>
-               
                 <th>products</th>
 
             </tr>
