--- a/MarketPricingSystem/MarketPricingSystem/Views/Supermarket/Updatesupermarket.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Supermarket/Updatesupermarket.cshtml
@@ -1,54 +1,66 @@
 ﻿@model MarketPricingSystem.Models.Supermarket
-
 @{
     ViewBag.Title = "Updatesupermarket";
     Layout = "~/Views/Shared/_LayoutPageUser.cshtml";
 }
-
-<h2>Updatesupermarket</h2>
-
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
+<main>
     
-    <div class="form-horizontal">
-        <h4>Supermarket</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.SupermarketId)
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-7">
+                <div class="card shadow-lg border-0 rounded-lg mt-5">
+                    <div class="card-header"><h3 class="text-center font-weight-light my-4">Update SuperMarket</h3></div>
+                    <div class="card-body">
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.SupermarketName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.SupermarketName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.SupermarketName, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.SupermarketRegion, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.SupermarketRegion, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.SupermarketRegion, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                        <form method="post" action="/Supermarket/Confirmupdate">
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.SupermarketDescription, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.SupermarketDescription, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.SupermarketDescription, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                            <div class="row mb-3">
+                                <div class="col-md-6">
+                                    <div class="form-floating mb-3 mb-md-0">
+                                        <input class="form-control" id="supermarketname" type="text"  name="MarketName" />
+                                        <label for="supermarketname">@Model.SupermarketName </label>
+                                    </div>
+                                </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                                <div class="col-md-6">
+                                    <div class="form-floating">
+                                        <input class="form-control" id="supermarketRegion" type="text"  name="MarketRegion"/>
+                                        <label for="supermarketRegion">@Model.SupermarketRegion</label>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="form-floating mb-3">
+                                <input class="form-control" id="supermarketDescription" type="text"  name="MarketDescription" />
+                                <label for="supermarketDescription">@Model.SupermarketDescription</label>
+                            </div>
+
+
+
+                            <div class="row mb-3">
+                                <div class="col-md-6">
+                                    <div class="form-floating mb-3 mb-md-0">
+                                        <input class="form-control" id="phonenumber" type="text" name="MarketNumber" />
+                                        <label for="phonenumber">@Model.Phonenumber</label>
+                                    </div>
+                                </div>
+                                
+                            </div>
+
+                            <input type="hidden" value="@Model.SupermarketId" name="Supermarketid" />
+
+                            <div class="mt-4 mb-0">
+                                <div class="d-grid"> <button type="submit" class="btn btn-primary"> Update</button> </div>
+                            </div>
+                        </form>
+
+
+
+                    </div>
+                   
+                </div>
             </div>
         </div>
     </div>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+</main>
