--- a/MarketPricingSystem/MarketPricingSystem/Views/Users/Dashboard.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Users/Dashboard.cshtml
@@ -48,9 +48,9 @@
 
                     <div class="col-xl-5 col-md-6">
                         <div class="card bg-success text-white mb-4">
-                            <div class="card-body">Users</div>
+                            <div class="card-body">Categories</div>
                             <div class="card-footer d-flex align-items-center justify-content-between">
-                                <a class="small text-white stretched-link" href="#">View Details</a>
+                                <a class="small text-white stretched-link" href="/Category/AllCategories">View Details</a>
                                 <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                             </div>
                         </div>
@@ -62,7 +62,7 @@
 
                     <div class="col-xl-5 col-md-6">
                         <div class="card bg-danger text-white mb-4">
-                            <div class="card-body">Danger Card</div>
+                            <div class="card-body">Users</div>
                             <div class="card-footer d-flex align-items-center justify-content-between">
                                 <a class="small text-white stretched-link" href="#">View Details</a>
                                 <div class="small text-white"><i class="fas fa-angle-right"></i></div>
