editing on dashboard page

--- a/MarketPricingSystem/MarketPricingSystem/Views/Users/Dashboard.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Users/Dashboard.cshtml
@@ -18,7 +18,7 @@
 
 
                         <div class="col-xl-5 col-md-10">
-                            <div class="card bg-primary text-white mb-4">
+                            <div class="card bg-primary bg-gradient text-white mb-4">
                                 <div class="card-body">Super Markets</div>
                                 <div class="card-footer d-flex align-items-center justify-content-between">
                                     <a class="small text-white stretched-link" href="/Supermarket/Allsupermarkets">View Details</a>
@@ -32,7 +32,7 @@
 
 
                     <div class="col-xl-5 col-md-6">
-                        <div class="card bg-warning text-white mb-4">
+                        <div class="card bg-primary bg-gradient text-white mb-4">
                             <div class="card-body">Products</div>
                             <div class="card-footer d-flex align-items-center justify-content-between">
                                 <a class="small text-white stretched-link" href="/Products/AllProducts">View Details</a>
@@ -47,7 +47,7 @@
 
 
                     <div class="col-xl-5 col-md-6">
-                        <div class="card bg-success text-white mb-4">
+                        <div class="card bg-warning bg-gradient text-white mb-4">
                             <div class="card-body">Categories</div>
                             <div class="card-footer d-flex align-items-center justify-content-between">
                                 <a class="small text-white stretched-link" href="/Category/AllCategories">View Details</a>
@@ -61,8 +61,52 @@
 
 
                     <div class="col-xl-5 col-md-6">
-                        <div class="card bg-danger text-white mb-4">
+                        <div class="card bg-warning bg-gradient text-white mb-4">
+                            <div class="card-body">Super market Products</div>
+                            <div class="card-footer d-flex align-items-center justify-content-between">
+                                <a class="small text-white stretched-link" href="#">View Details</a>
+                                <div class="small text-white"><i class="fas fa-angle-right"></i></div>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+                         <div class="col-xl-5 col-md-6">
+                        <div class="card bg-danger bg-gradient text-white mb-4">
+                            <div class="card-body">Roles</div>
+                            <div class="card-footer d-flex align-items-center justify-content-between">
+                                <a class="small text-white stretched-link" href="#">View Details</a>
+                                <div class="small text-white"><i class="fas fa-angle-right"></i></div>
+                            </div>
+                        </div>
+                    </div>       
+                    
+                    
+                    <div class="col-xl-5 col-md-6">
+                        <div class="card bg-danger bg-gradient text-white mb-4">
+                            <div class="card-body">Permissions</div>
+                            <div class="card-footer d-flex align-items-center justify-content-between">
+                                <a class="small text-white stretched-link" href="#">View Details</a>
+                                <div class="small text-white"><i class="fas fa-angle-right"></i></div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                           <div class="col-xl-5 col-md-6">
+                        <div class="card bg-dark bg-gradient text-white mb-4">
                             <div class="card-body">Users</div>
+                            <div class="card-footer d-flex align-items-center justify-content-between">
+                                <a class="small text-white stretched-link" href="#">View Details</a>
+                                <div class="small text-white"><i class="fas fa-angle-right"></i></div>
+                            </div>
+                        </div>
+                    </div> 
+                    
+                    <div class="col-xl-5 col-md-6">
+                        <div class="card bg-dark bg-gradient text-white mb-4">
+                            <div class="card-body">Users Activities</div>
                             <div class="card-footer d-flex align-items-center justify-content-between">
                                 <a class="small text-white stretched-link" href="#">View Details</a>
                                 <div class="small text-white"><i class="fas fa-angle-right"></i></div>
