--- a/MarketPricingSystem/MarketPricingSystem/Views/Home/Allproducts.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Home/Allproducts.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MarketPricingSystem.ViewModel.AllProducts>
+﻿@model IEnumerable<MarketPricingSystem.ViewModel.product>
 @{
 
     
