finished 4 cards supermarket,products,categories,permissions

--- a/MarketPricingSystem/MarketPricingSystem/Views/Products/AllProducts.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Products/AllProducts.cshtml
@@ -7,19 +7,19 @@
 
 <main>
     <div class="container-fluid px-4">
-        <h1 class="mt-4">Super Markets</h1>
+        <h1 class="mt-4">Products</h1>
         <ol class="breadcrumb mb-4">
             <li class="breadcrumb-item"><a href="/Users/Dashboard">Dashboard</a></li>
             <li class="breadcrumb-item active">Tables</li>
         </ol>
-        <div class="card mb-4">
+        <div style="margin-bottom:10px">
          
-            <a href="/Supermarket/Createproduct" class="btn btn-success" role="button">Create New product </a>
+            <a href="/Products/Createproduct" class="btn btn-success" role="button">Add New product </a>
         </div>
         <div class="card mb-4">
             <div class="card-header">
                 <i class="fas fa-table me-1"></i>
-              All SuperMarkets
+                All Products
             </div>
             <div class="card-body">
                 <table id="datatablesSimple">
