--- a/MarketPricingSystem/MarketPricingSystem/Views/Category/AllCategories.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Category/AllCategories.cshtml
@@ -12,7 +12,7 @@
             <li class="breadcrumb-item"><a href="/Users/Dashboard">Dashboard</a></li>
             <li class="breadcrumb-item active">Tables</li>
         </ol>
-        <div class="card mb-4">
+        <div  style="margin-bottom:10px">
          
             <a href="/Category/Createcategory" class="btn btn-success" role="button">Add New Category </a>
         </div>
