--- a/MarketPricingSystem/MarketPricingSystem/Views/Permission/Allpermissions.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Permission/Allpermissions.cshtml
@@ -7,15 +7,12 @@
 
 <main>
     <div class="container-fluid px-4">
-        <h1 class="mt-4">All Categories</h1>
+        <h1 class="mt-4">Permissions</h1>
         <ol class="breadcrumb mb-4">
             <li class="breadcrumb-item"><a href="/Users/Dashboard">Dashboard</a></li>
             <li class="breadcrumb-item active">Tables</li>
         </ol>
-        <div class="card mb-4">
-         
-          Permissions
-        </div>
+   
         <div class="card mb-4">
             <div class="card-header">
                 <i class="fas fa-table me-1"></i>
