--- a/MarketPricingSystem/MarketPricingSystem/Views/Products/Createproduct.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Products/Createproduct.cshtml
@@ -1,56 +1,67 @@
-﻿
+﻿@model  IEnumerable< MarketPricingSystem.Models.Categories >
 @{
-    ViewBag.Title = "Createsupermarket";
+    ViewBag.Title = "AddProduct";
     Layout = "~/Views/Shared/_LayoutPageUser.cshtml";
 }
-
-
 <main>
 
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-7">
                 <div class="card shadow-lg border-0 rounded-lg mt-5">
-                    <div class="card-header"><h3 class="text-center font-weight-light my-4">Add new SuperMarket</h3></div>
+                    <div class="card-header"><h3 class="text-center font-weight-light my-4">Update Product</h3></div>
                     <div class="card-body">
 
 
-                        <form method="post" action="/Supermarket/ConfirmCreate">
+                        <form method="post" action="/Products/Confirmcreate">
 
                             <div class="row mb-3">
                                 <div class="col-md-6">
                                     <div class="form-floating mb-3 mb-md-0">
-                                        <input class="form-control" id="supermarketname" type="text" name="MarketName" required />
-                                        <label for="supermarketname"> SuperMarket Name</label>
+                                        <input class="form-control" id="productname" type="text" name="productname"  required />
+                                        <label for="productname">Name </label>
                                     </div>
                                 </div>
 
                                 <div class="col-md-6">
                                     <div class="form-floating">
-                                        <input class="form-control" id="supermarketRegion" type="text" name="MarketRegion" required />
-                                        <label for="supermarketRegion"> SuperMarket Region</label>
+                                        <input class="form-control" id="Barcode" type="text" name="Barcode" required />
+                                        <label for="Barcode">Barcode</label>
                                     </div>
                                 </div>
                             </div>
 
                             <div class="form-floating mb-3">
-                                <input class="form-control" id="supermarketDescription" type="text" name="MarketDescription"  required/>
-                                <label for="supermarketDescription"> SuperMarket Description</label>
+                                <input class="form-control" id="ProductDescription" type="text" name="ProductDescription" required />
+                                <label for="ProductDescription">Description</label>
                             </div>
 
 
 
                             <div class="row mb-3">
                                 <div class="col-md-6">
-                                    <div class="form-floating mb-3 mb-md-0">
-                                        <input class="form-control" id="phonenumber" type="text" name="MarketNumber"  required/>
-                                        <label for="phonenumber">SuperMarket Phone Number</label>
+                                    <div class="form-group">
+                                        <label for="categories">Category</label>
+
+                                        <select id="categories" class="form-control" name="Categoryid">
+
+                                           @foreach (var category in Model)
+                                           {
+                                                <option value="@category.CategoryId" >@category.CategoryName</option>
+                                           }
+
+
+
+
+                                        </select>
+
                                     </div>
+
                                 </div>
 
                             </div>
 
-                  
+                          
 
                             <div class="mt-4 mb-0">
                                 <div class="d-grid"> <button type="submit" class="btn btn-primary"> Add</button> </div>
