--- a/MarketPricingSystem/MarketPricingSystem/Views/Products/Deleteproduct.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Products/Deleteproduct.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MarketPricingSystem.ViewModel.product
 
 @{
-    ViewBag.Title = "Deletesupermarket";
+    ViewBag.Title = "DeleteProduct";
     Layout = "~/Views/Shared/_LayoutPageUser.cshtml";
 }
 
@@ -10,7 +10,7 @@
 <div style="margin-left:150px">
 
     <h3 style="color:red">Are you sure you want to delete this? </h3>
-    <h4  style="color:red">Supermarket</h4>
+    <h4  style="color:red">Product</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
