--- a/MarketPricingSystem/MarketPricingSystem/Views/Products/Updateproduct.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Products/Updateproduct.cshtml
@@ -1,4 +1,4 @@
-﻿@model MarketPricingSystem.ViewModel.product
+﻿@model MarketPricingSystem.ViewModel.productandcategory
 @{
     ViewBag.Title = "Updatesupermarket";
     Layout = "~/Views/Shared/_LayoutPageUser.cshtml";
@@ -9,46 +9,66 @@
         <div class="row justify-content-center">
             <div class="col-lg-7">
                 <div class="card shadow-lg border-0 rounded-lg mt-5">
-                    <div class="card-header"><h3 class="text-center font-weight-light my-4">Update SuperMarket</h3></div>
+                    <div class="card-header"><h3 class="text-center font-weight-light my-4">Update Product</h3></div>
                     <div class="card-body">
 
 
-                        <form method="post" action="/Supermarket/Confirmupdate">
+                        <form method="post" action="/Products/Confirmupdate">
 
                             <div class="row mb-3">
                                 <div class="col-md-6">
                                     <div class="form-floating mb-3 mb-md-0">
-                                        <input class="form-control" id="supermarketname" type="text"  name="MarketName" />
-                                        <label for="supermarketname">@Model.SupermarketName </label>
+                                        <input class="form-control" id="productname" type="text"  name="productname" value="@Model.Product.ProductName" required/>
+                                        <label for="productname">Name </label>
                                     </div>
                                 </div>
 
                                 <div class="col-md-6">
                                     <div class="form-floating">
-                                        <input class="form-control" id="supermarketRegion" type="text"  name="MarketRegion"/>
-                                        <label for="supermarketRegion">@Model.SupermarketRegion</label>
+                                        <input class="form-control" id="Barcode" type="text"  name="Barcode" value="@Model.Product.BarcodeNb" required/>
+                                        <label for="Barcode">Barcode</label>
                                     </div>
                                 </div>
                             </div>
 
                             <div class="form-floating mb-3">
-                                <input class="form-control" id="supermarketDescription" type="text"  name="MarketDescription" />
-                                <label for="supermarketDescription">@Model.SupermarketDescription</label>
+                                <input class="form-control" id="ProductDescription" type="text"  name="ProductDescription"  value="@Model.Product.ProductDescription" required />
+                                <label for="ProductDescription">Description</label>
                             </div>
 
 
 
                             <div class="row mb-3">
                                 <div class="col-md-6">
-                                    <div class="form-floating mb-3 mb-md-0">
-                                        <input class="form-control" id="phonenumber" type="text" name="MarketNumber" />
-                                        <label for="phonenumber">@Model.Phonenumber</label>
+                                    <div class="form-group">
+                                        <label for="categories">Category</label>
+
+                                        <select id="categories" class="form-control" name="Categoryid">
+
+                                            @foreach (var category in Model.Categories)
+                                            {
+                                                if (Model.Product.CategoryId == category.CategoryId)
+                                                {
+                                                    <option value="@category.CategoryId" selected>@category.CategoryName</option>
+                                                }
+                                                else
+                                                {
+                                                <option value="@category.CategoryId">@category.CategoryName</option>
+                                                    }
+
+                                                }
+
+
+
+                                        </select>
+
                                     </div>
+
                                 </div>
                                 
                             </div>
 
-                            <input type="hidden" value="@Model.SupermarketId" name="Supermarketid" />
+                            <input type="hidden" value="@Model.Product.ProductId" name="Productid" />
 
                             <div class="mt-4 mb-0">
                                 <div class="d-grid"> <button type="submit" class="btn btn-primary"> Update</button> </div>
