--- a/MarketPricingSystem/MarketPricingSystem/Views/Supermarket/Updatesupermarket.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Supermarket/Updatesupermarket.cshtml
@@ -18,22 +18,22 @@
                             <div class="row mb-3">
                                 <div class="col-md-6">
                                     <div class="form-floating mb-3 mb-md-0">
-                                        <input class="form-control" id="supermarketname" type="text"  name="MarketName" />
-                                        <label for="supermarketname">@Model.SupermarketName </label>
+                                        <input class="form-control" id="supermarketname" type="text"  name="MarketName" value="@Model.SupermarketName" required/>
+                                        <label for="supermarketname">Name </label>
                                     </div>
                                 </div>
 
                                 <div class="col-md-6">
                                     <div class="form-floating">
-                                        <input class="form-control" id="supermarketRegion" type="text"  name="MarketRegion"/>
-                                        <label for="supermarketRegion">@Model.SupermarketRegion</label>
+                                        <input class="form-control" id="supermarketRegion" type="text"  name="MarketRegion" value="@Model.SupermarketRegion" required/>
+                                        <label for="supermarketRegion">Region</label>
                                     </div>
                                 </div>
                             </div>
 
                             <div class="form-floating mb-3">
-                                <input class="form-control" id="supermarketDescription" type="text"  name="MarketDescription" />
-                                <label for="supermarketDescription">@Model.SupermarketDescription</label>
+                                <input class="form-control" id="supermarketDescription" type="text"  name="MarketDescription" value="@Model.SupermarketDescription" required/>
+                                <label for="supermarketDescription">Description</label>
                             </div>
 
 
@@ -41,8 +41,8 @@
                             <div class="row mb-3">
                                 <div class="col-md-6">
                                     <div class="form-floating mb-3 mb-md-0">
-                                        <input class="form-control" id="phonenumber" type="text" name="MarketNumber" />
-                                        <label for="phonenumber">@Model.Phonenumber</label>
+                                        <input class="form-control" id="phonenumber" type="text" name="MarketNumber"  value="@Model.Phonenumber" required/>
+                                        <label for="phonenumber">Phone number</label>
                                     </div>
                                 </div>
                                 
