working on role card plus editing some bugs

--- a/MarketPricingSystem/MarketPricingSystem/Views/Category/Deletecategory.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Category/Deletecategory.cshtml
@@ -28,7 +28,7 @@
 
     <div class="form-actions no-color">
         <a href="/Category/ConfirmDelete/@Model.CategoryId" class="btn btn-danger" role="button">Delete</a>
-        <a href="/Supermarket/Allsupermarkets" class="btn btn-primary" role="button">Back</a>
+        <a href="/Category/AllCategories" class="btn btn-primary" role="button">Back</a>
     </div>
 
 </div>
