--- a/MarketPricingSystem/MarketPricingSystem/Views/Shared/_LayoutPageUser.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Shared/_LayoutPageUser.cshtml
@@ -10,6 +10,10 @@
     <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet" />
     <link href="~/Content/user.css" rel="stylesheet" />
     <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
+
+    @RenderSection("Styles", false)
+
+
 </head>
 <body class="sb-nav-fixed">
 
@@ -27,7 +31,7 @@
                 <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                     <li><a class="dropdown-item" href="#!">Settings</a></li>
-                  
+
                     <li><hr class="dropdown-divider" /></li>
                     <li><a class="dropdown-item" href="/Account/Signout">Logout</a></li>
                 </ul>
@@ -84,6 +88,8 @@
 
 
 
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="~/Scripts//usersdatatables.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
@@ -92,6 +98,7 @@
     <script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest" crossorigin="anonymous"></script>
     <script src="~/Scripts/users.js"></script>
 
+    @RenderSection("scripts", required: false)
 </body>
 
 </html>
