--- a/MarketPricingSystem/MarketPricingSystem/Views/Others/Userroles.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Others/Userroles.cshtml
@@ -1,51 +1,51 @@
-﻿@model IEnumerable<MarketPricingSystem.Models.Permissions>
+﻿@model   IEnumerable<MarketPricingSystem.Models.Roles>
 @{
-    ViewBag.Title = "Permissions";
+    ViewBag.Title = "Userroles";
     Layout = "~/Views/Shared/_LayoutPageUser.cshtml";
 }
 
 
 <main>
     <div class="container-fluid px-4">
-        <h1 class="mt-4">All Permissions</h1>
+        <h1 class="mt-4">All Roles</h1>
         <ol class="breadcrumb mb-4">
             <li class="breadcrumb-item"><a href="/Users/Dashboard">Dashboard</a></li>
             <li class="breadcrumb-item active">Tables</li>
         </ol>
-       
+
         <div class="card mb-4">
             <div class="card-header">
                 <i class="fas fa-table me-1"></i>
-                Permissions
+                Roles
             </div>
             <div class="card-body">
                 <table id="datatablesSimple">
                     <thead>
                         <tr>
-                            <th  >Permission Name</th>
+                            <th>Role Name</th>
 
-                          
+
 
 
                         </tr>
                     </thead>
                     <tfoot>
                         <tr>
-                            <th>Permission Name</th>
+                            <th>Role Name</th>
 
 
 
                         </tr>
                     </tfoot>
                     <tbody>
-                        @foreach (var permission in Model)
+                        @foreach (var Role in Model)
                         {
 
                             <tr>
-                                <td style="color:forestgreen">@permission.PermissionName</td>
+                                <td style="color:forestgreen">@Role.RoleName</td>
 
 
-                               
+
 
                             </tr>
                         }
