--- a/MarketPricingSystem/MarketPricingSystem/Views/Users/Dashboard.cshtml
+++ b/MarketPricingSystem/MarketPricingSystem/Views/Users/Dashboard.cshtml
@@ -1,112 +1,127 @@
-﻿
+﻿@model List<int>
 @{
     ViewBag.Title = "Dashboard";
     Layout = "~/Views/Shared/_LayoutPageUser.cshtml";
 }
 
 
-        <main>
-            <div class="container-fluid px-4">
-                <h1 class="mt-4">Dashboard</h1>
-                <ol class="breadcrumb mb-4">
-                    <li class="breadcrumb-item active">Dashboard</li>
-                </ol>
 
-
-
-                <div class="row">
-
-                    <div class="col-xl-2 col-md-10">
-                        <div class="card bg-primary bg-gradient text-white mb-4">
-                            <div class="card-body">Super Markets</div>
-                            <div class="card-footer d-flex align-items-center justify-content-between">
-                                <a class="small text-white stretched-link" href="/Supermarket/Allsupermarkets">View Details</a>
-                                <div class="small text-white"><i class="fas fa-angle-right"></i></div>
-                            </div>
-                        </div>
-                    </div>
+<div class="container-fluid px-4">
+    <h1 class="mt-4">Dashboard</h1>
+    <ol class="breadcrumb mb-4">
+        <li class="breadcrumb-item active">Dashboard</li>
+    </ol>
+</div>
 
 
 
 
-
-                    <div class="col-xl-2 col-md-6">
-                        <div class="card bg-primary bg-gradient text-white mb-4">
-                            <div class="card-body">Products</div>
-                            <div class="card-footer d-flex align-items-center justify-content-between">
-                                <a class="small text-white stretched-link" href="/Products/AllProducts">View Details</a>
-                                <div class="small text-white"><i class="fas fa-angle-right"></i></div>
-                            </div>
-                        </div>
-                    </div>
-
-
-
-
-
-                    <div class="col-xl-2 col-md-6">
-                        <div class="card bg-warning bg-gradient text-white mb-4">
-                            <div class="card-body">Categories</div>
-                            <div class="card-footer d-flex align-items-center justify-content-between">
-                                <a class="small text-white stretched-link" href="/Category/AllCategories">View Details</a>
-                                <div class="small text-white"><i class="fas fa-angle-right"></i></div>
-                            </div>
-                        </div>
-                    </div>
-
-
-
-
-
-                    <div class="col-xl-2 col-md-6">
-                        <div class="card bg-warning bg-gradient text-white mb-4">
-                            <div class="card-body">Super market Products</div>
-                            <div class="card-footer d-flex align-items-center justify-content-between">
-                                <a class="small text-white stretched-link" href="#">View Details</a>
-                                <div class="small text-white"><i class="fas fa-angle-right"></i></div>
-                            </div>
-                        </div>
-                    </div>
-
-
-
-                    <div class="col-xl-2 col-md-6">
-                        <div class="card bg-danger bg-gradient text-white mb-4">
-                            <div class="card-body">Roles</div>
-                            <div class="card-footer d-flex align-items-center justify-content-between">
-                                <a class="small text-white stretched-link" href="/Roles/AllRoles">View Details</a>
-                                <div class="small text-white"><i class="fas fa-angle-right"></i></div>
-                            </div>
-                        </div>
-                    </div>
-
-
-                    <div class="col-xl-2 col-md-6">
-                        <div class="card bg-danger bg-gradient text-white mb-4">
-                            <div class="card-body">Permissions</div>
-                            <div class="card-footer d-flex align-items-center justify-content-between">
-                                <a class="small text-white stretched-link" href="/Permission/Allpermissions">View Details</a>
-                                <div class="small text-white"><i class="fas fa-angle-right"></i></div>
-                            </div>
-                        </div>
-                    </div>
-
-
-                    <div class="col-xl-2 col-md-6">
-                        <div class="card bg-dark bg-gradient text-white mb-4">
-                            <div class="card-body">Users</div>
-                            <div class="card-footer d-flex align-items-center justify-content-between">
-                                <a class="small text-white stretched-link" href="/Others/Allusers">View Details</a>
-                                <div class="small text-white"><i class="fas fa-angle-right"></i></div>
-                            </div>
-                        </div>
-                    </div>
-
+    <div class="row">
+        <div class="col-md-4 col-xl-4">
+            <div class="card bg-c-blue order-card">
+                <div class="card-block">
+                    <h6 class="m-b-20">Super Markets</h6>
+                    <h2 class="text-right"><i class="fa-solid fa-shop" style="margin-right:10px"></i><span>@Model.ElementAt(0)</span></h2>
+                    <p class="m-b-0"> <span class="f-right"></span></p>
                 </div>
-
-          
-
-
             </div>
-        </main>
-          
+        </div>
+
+        <div class="col-md-4 col-xl-4">
+            <div class="card bg-c-green order-card">
+                <div class="card-block">
+                    <h6 class="m-b-20">Products</h6>
+                    <h2 class="text-right"><i class="fa-solid fa-cart-shopping" style="margin-right:10px"></i><span>@Model.ElementAt(1)</span></h2>
+                    <p class="m-b-0"> <span class="f-right"></span></p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4 col-xl-4">
+            <div class="card bg-c-yellow order-card">
+                <div class="card-block">
+                    <h6 class="m-b-20">Categories</h6>
+                    <h2 class="text-right"><i class="fa-solid fa-magnifying-glass"  style="margin-right:10px"></i><span>@Model.ElementAt(2)</span></h2>
+                    <p class="m-b-0"><span class="f-right"></span></p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4 col-xl-4">
+            <div class="card bg-c-pink order-card">
+                <div class="card-block">
+                    <h6 class="m-b-20">Users</h6>
+                    <h2 class="text-right"> <i class="fa-solid fa-users"></i> <span> @Model.ElementAt(3)</span></h2>
+                    <p class="m-b-0"> <span class="f-right"></span></p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+@section Styles {
+   
+    <style>
+
+
+
+        body {
+            margin-top: 7px;
+            background: #FAFAFA;
+            padding:20px;
+        }
+
+        .order-card {
+            color: #fff;
+        }
+
+        .bg-c-blue {
+            background: linear-gradient(45deg,#4099ff,#73b4ff);
+        }
+
+        .bg-c-green {
+            background: linear-gradient(45deg,#2ed8b6,#59e0c5);
+        }
+
+        .bg-c-yellow {
+            background: linear-gradient(45deg,#FFB64D,#ffcb80);
+        }
+
+        .bg-c-pink {
+            background: linear-gradient(45deg,#FF5370,#ff869a);
+        }
+
+
+        .card {
+            border-radius: 5px;
+            -webkit-box-shadow: 0 1px 2.94px 0.06px rgba(4,26,55,0.16);
+            box-shadow: 0 1px 2.94px 0.06px rgba(4,26,55,0.16);
+            border: none;
+            margin-bottom: 30px;
+            -webkit-transition: all 0.3s ease-in-out;
+            transition: all 0.3s ease-in-out;
+        }
+
+            .card .card-block {
+                padding: 25px;
+            }
+
+        .order-card i {
+            font-size: 26px;
+        }
+
+        .f-left {
+            float: left;
+        }
+
+        .f-right {
+            float: right;
+        }
+    </style>
+
+
+}
